# devops-backend

./: .env.exemplo  .flake8  README.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
backend/core/: admin.py  router.py
backend/core/migrations/: 0001_initial_models.py
backend/core/models/: __init__.py  author.py  book.py  comment.py  genre.py  user.py
backend/core/serializers/: author.py  book.py  genre.py
backend/core/views/: __init__.py  author.py  book.py  genre.py
